<resources>
    <string name="app_name">Family Map</string>
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="userName">User Name:</string>
    <string name="password">Password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapFragmentMessage">Select a marker to get started</string>
    <string name="searchMenu">Search</string>
    <string name="settingsMenu">Settings</string>

    <string name="LifeStoryLinesText">Life Story Lines</string>
    <string name="FamTreeLinesText">Family Tree Lines</string>
    <string name="SpouseLinesText">Spouse Lines</string>
    <string name="FatherSideText">Father\'s Side</string>
    <string name="MotherSideText">Mother\'s Side</string>
    <string name="MaleEventText">Male Events</string>
    <string name="FemaleEvent">Female Events</string>
    <string name="LogoutText">Logout</string>
    <string name="LifeStoryInfoText">Show Life Story Lines</string>
    <string name="FamTreeInfoText">Show Family Tree Lines</string>
    <string name="SpouseInfoText">Show Spouse Lines</string>
    <string name="FatherInfoText">Filter by Father\'s Side of Family</string>
    <string name="MotherInfoText">Filter by Mother\'s Side of Family</string>
    <string name="GenderInfoText">Filter Events based on Gender</string>
    <string name="LogoutInfoText">Return to Login Screen</string>

    <string name="title_activity_personActivity">Person Details</string>
    <string name="PersonDetailsFirstName">FirstName</string>
    <string name="PersonDetailsFirstNameDesc">First Name</string>
    <string name="PersonDetailsLastName">LastName</string>
    <string name="PersonDetailsLastNameDesc">Last Name</string>
    <string name="PersonDetailsGender">Gender</string>
    <string name="PersonDetailsGenderDesc">Gender</string>

    <string name="lifeEventList">Life Events</string>
    <string name="famPeople">Family</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="action_search">Search</string>
    <string name="app_label">Family Map</string>
    <string name="search_hint">John Smith</string>
</resources>
